# ALReLU

./: .gitignore  ALReLU.py  AReLU.py  MANIFEST.in  README.keras.md  README.md  pyproject.toml
.github/workflows/: publish-keras.yml  publish-torch.yml
scripts/: train_mnist_keras_tf.py  train_mnist_torch.py
src/alrelu_keras/: __init__.py  _compat.py  activations.py  layers.py
tests/: test_alrelu.py
