[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alrelu-keras"
version = "0.1.0"
description = "ALReLU activation package for Keras with fixed and trainable alpha variants."
readme = "README.keras.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Stamatis" }
]
keywords = ["keras", "activation", "deep-learning", "alrelu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "keras>=3.0.0"
]

[project.optional-dependencies]
tensorflow = [
  "tensorflow>=2.15.0"
]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
  "twine>=5.1.0"
]

[project.urls]
Repository = "https://github.com/stamatis/ALReLU"
Issues = "https://github.com/stamatis/ALReLU/issues"
Homepage = "https://github.com/stamatis/ALReLU/tree/main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
